<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="accounts">Accounts</string>
    <string name="sort_order">Sort Order</string>
    <string name="user_interface">User interface</string>
    <string name="sort_accounts">Sort accounts</string>
    <string name="sort_accounts_summary">Define sort order for accounts list (requires restart)</string>
    <string name="blur_balances">Blur balances</string>
    <string name="blur_balances_summary">Reveal balance after touch (long touch on Account/Blotter totals to display by currency)</string>
    <string name="sort_locations">Sort locations</string>
    <string name="sort_locations_summary">Define sort order for locations list</string>
    <string name="sort_templates">Sort templates</string>
    <string name="sort_templates_summary">Define sort order for templates list</string>
    <string name="secure_window">Secure window content</string>
    <string name="secure_window_summary">Hide content in recent apps view and before PIN lock, also prevents taking screenshots (requires restart)</string>
    <string name="pin_protection">PIN Protection</string>
    <string name="pin_protection_summary">Check to protect access with PIN</string>
    <string name="change_pin">Change PIN</string>
    <string name="protection">Protection</string>
    <string name="transaction_screen">New transaction screen</string>
    <string name="transaction_screen_summary">Preferences for new transaction/transfer screen</string>
    <string name="home_screen">Home Screen</string>
    <string name="shortcut_new_transaction">\'New Transaction\' shortcut</string>
    <string name="shortcut_new_transfer">\'New Transfer\' shortcut</string>
    <string name="shortcut_summary">Add the shortcut to the Home Screen</string>
    <string name="gdocs_backup">Google Drive Backup</string>
    <string name="backup_folder">Backup Folder</string>
    <string name="backup_folder_summary">To store backup files create a new folder in My Drive</string>
    <string name="other">Other</string>
    <string name="enable_widget">Enable widget</string>
    <string name="enable_widget_summary">Show account total on the widget</string>
    <string name="treat_transfer_to_ccard_as_payment">Treat Transfer to Credit Card as Bill Payment</string>
    <string name="treat_transfer_to_ccard_as_payment_summary">Do not deduce transfered amount from bill cycle</string>
    <string name="ui_language">Locale</string>
    <string name="ui_language_summary">Set language of user interface (requires restart!)</string>
    <string name="restore_missed_scheduled_transactions">Restore missed schedules</string>
    <string name="restore_missed_scheduled_transactions_summary">Missed scheduled transactions will be restored with \'Restored\' status</string>
    <string name="show_running_balance">Show running balance</string>
    <string name="show_running_balance_summary">Show account running balance in the blotter (requires restart)</string>
    <string name="colorize_blotter_item">Colorize transaction fields</string>
    <string name="colorize_blotter_item_summary">Use color to distinguish transaction category, payee and note</string>
    <string name="show_project_in_blotter">Show project name</string>
    <string name="show_project_in_blotter_summary">Show project name when transaction has assigned a project</string>
    <string name="reset_copied_transaction_status">Reset copied transaction status</string>
    <string name="reset_copied_transaction_status_summary">Change copied transaction status if enabled</string>
    <string name="reset_copied_foreign_transaction_status">Reset copied foreign currency transaction status</string>
    <string name="reset_copied_foreign_transaction_status_summary">Change copied foreign currency transaction status if enabled</string>
    <string name="update_copied_transaction_project">Update Project of copied transaction</string>
    <string name="update_copied_transaction_project_summary">Make copied transaction use latest project if it has a project</string>
    <string name="colorize_weekend_date">Colorize weekend date/time</string>
    <string name="colorize_weekend_date_summary">Show dates of Saturday/Sunday in red</string>
    <string name="lock_time">Lock time</string>
    <string name="lock_time_summary">Time to keep main screen active before locking it off</string>
    <string name="pin_protection_lock_transaction">Lock New Transaction\\Transfer</string>
    <string name="pin_protection_lock_transaction_summary">Lock \'New transaction\' and \'New transfer\' screens by PIN</string>
    <string name="auto_backup_enabled">Enable auto-backup</string>
    <string name="auto_backup_enabled_summary">Backup database daily at the specified time</string>
    <string name="auto_backup_time">Auto-backup time</string>
    <string name="auto_backup_time_summary" formatted="false">Do daily backup at %02d:%02d</string>
    <string name="database_backup">Database Backup</string>
    <string name="database_backup_folder">Backup Folder</string>
    <string name="database_backup_folder_summary">Current database backup folder: %s</string>
    <string name="quick_menu_account_enabled">Accounts quick-menu</string>
    <string name="quick_menu_account_enabled_summary">Enable one-tap menu in the Accounts</string>
    <string name="quick_menu_transaction_enabled">Blotter quick-menu</string>
    <string name="quick_menu_transaction_enabled_summary">Enable one-tap menu in the Blotter</string>
    <string name="quick_menu_transaction_additional_status">Additional status</string>
    <string name="quick_menu_transaction_additional_status_summary">Show additional transaction status in quick menu</string>
    <string name="quick_menu_transaction_duplicate_keep_time">Show duplicate keeping time of day</string>
    <string name="quick_menu_transaction_duplicate_keep_time_summary">Show "duplicate keeping time of the day" button in quick menu</string>
    <string name="quick_menu_transaction_duplicate_keep_date_time">Show duplicate keeping date and time</string>
    <string name="quick_menu_transaction_duplicate_keep_date_time_summary">Show "duplicate keeping date and time" button in quick menu</string>
    <string name="dropbox">Dropbox</string>
    <string name="dropbox_authorize">Authorize</string>
    <string name="dropbox_authorize_summary">Allow Financisto to upload files to your Dropbox</string>
    <string name="dropbox_unlink">Unlink</string>
    <string name="dropbox_unlink_summary">Prevent Financisto from uploading files to your Dropbox</string>
    <string name="dropbox_upload_backup">Upload Backups</string>
    <string name="dropbox_upload_backup_summary">Upload database backups to Dropbox</string>
    <string name="dropbox_upload_autobackup">Upload Auto-backups</string>
    <string name="dropbox_upload_autobackup_summary">Upload database auto-backups to Dropbox</string>
    <string name="dropbox_upload_pictures">Upload Pictures</string>
    <string name="dropbox_upload_pictures_summary">Upload attached pictures to Dropbox</string>
    <string name="dropbox_download_pictures">Download Pictures</string>
    <string name="dropbox_download_pictures_summary">Download attached pictures not found locally from Dropbox</string>
    <string name="exchange_rates">Exchange rates</string>
    <string name="collapse_blotter_buttons">Collapse Blotter buttons</string>
    <string name="collapse_blotter_buttons_summary">Group New Transaction/Transfer/Template buttons together (requires restart)</string>
    <string name="account_list_date">Date in account list</string>
    <string name="account_list_date_summary">Select the date to display below accounts (requires restart)</string>
    <string name="accounts_list_screen">Accounts List</string>
    <string name="accounts_list_screen_summary">Preferences for accounts list screen</string>
    <string name="blotter_screen">Blotter</string>
    <string name="blotter_screen_summary">Preferences for blotter screen</string>
    <string name="hide_closed_accounts">Hide closed accounts</string>
    <string name="hide_closed_accounts_summary">Hide or show closed accounts in the accounts list (requires restart)</string>
    <string name="startup_screen">Startup screen</string>
    <string name="startup_screen_summary">Select tab which will be selected on startup</string>
    <string name="exchange_rate_provider">Exchange Rate Provider</string>
    <string name="exchange_rate_provider_summary">Select provider to download exchange rates</string>
    <string name="openexchangerates_app_id_summary">Please register a free account on OpenExchangeRates and provide your App ID</string>
    <string name="pin_protection_haptic_feedback">Haptic feedback</string>
    <string name="pin_protection_haptic_feedback_summary">Enable vibration when tapping PIN or Calculator buttons</string>
    <string name="google_drive_backup_account">Backup account</string>
    <string name="google_drive_backup_account_summary">Choose your Google Drive account</string>
    <string name="google_drive_sign_out">Sign out account</string>
    <string name="google_drive_sign_out_summary">Sign out to choose another account</string>
    <string name="google_drive_upload_backup">Upload Backups</string>
    <string name="google_drive_upload_backup_summary">Upload database backups to Google Drive</string>
    <string name="google_drive_upload_autobackup">Upload Auto-backups</string>
    <string name="google_drive_upload_autobackup_summary">Upload database auto-backups to Google Drive</string>
    <string name="google_drive_upload_pictures">Upload Pictures</string>
    <string name="google_drive_upload_pictures_summary">Upload attached pictures to Google Drive</string>
    <string name="google_drive_download_pictures">Download Pictures</string>
    <string name="google_drive_download_pictures_summary">Download attached pictures not found locally from Google Drive</string>
    <string name="show_menu_button_on_accounts_screen">Show Menu</string>
    <string name="show_menu_button_on_accounts_screen_summary">Show menu button on the Accounts screen</string>
    <string name="pref_tpl">Notification Template</string>
    <string name="pref_tpl_transaction_status_title">Transaction Status</string>
    <string name="pref_tpl_transaction_status">Status of transaction created from template: %s</string>
    <string name="pref_tpl_adding_to_note_title">Saving notification text</string>
    <string name="pref_tpl_adding_to_note">Add notification text to transaction note</string>
    <string name="pin_warning">Please make sure to remember the pin. There is no way to recover your information or turn off the protection if you lose or forget the pin.</string>
    <string name="auto_backup_reminder_enabled">Remind about autobackup</string>
    <string name="auto_backup_reminder_enabled_summary">Remind if autobackup has not been enabled for a few days.</string>
    <string name="auto_backup_warning_enabled">Notify about failures</string>
    <string name="auto_backup_warning_summary">Notify if autobackup failed during the last execution.</string>
    <string name="pin_protection_use_fingerprint">Fingerprint Unlock</string>
    <string name="pin_protection_use_fingerprint_summary">Use Fingerprint to unlock the application</string>
    <string name="pin_protection_use_fingerprint_fallback_to_pin_summary">Fallback to PIN</string>
    <string name="pin_protection_use_fingerprint_fallback_to_pin">Allow to use PIN to unlock the application even if the fingerprint is enabled.</string>
    <string name="show_transfer_current_balance">Show \'Transfer current balance\'</string>
    <string name="show_transfer_current_balance_summary">Show \'Transfer current balance\' in account quick action menu</string>
    <string name="first_day_of_week">First day of week</string>
    <string name="first_day_of_week_summary">Change first day of the week used in reporting</string>
</resources>