<!--
  Copyright (c) 2010 Denis Solonenko.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
  
  Contributors:
      Denis Solonenko - initial API and implementation
-->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/user_interface">
        <ListPreference
            android:defaultValue="default"
            android:entries="@array/ui_language_entities"
            android:entryValues="@array/ui_language_values"
            android:key="ui_language"
            android:summary="@string/ui_language_summary"
            android:title="@string/ui_language" />
        <ListPreference
            android:defaultValue="ACCOUNTS"
            android:entries="@array/startup_screen_entities"
            android:entryValues="@array/startup_screen_values"
            android:key="startup_screen"
            android:summary="@string/startup_screen_summary"
            android:title="@string/startup_screen" />
        <Preference
            android:summary="@string/accounts_list_screen_summary"
            android:title="@string/accounts_list_screen"
            app:fragment="tw.tib.financisto.preference.AccountPreferencesFragment" />
        <Preference
            android:summary="@string/blotter_screen_summary"
            android:title="@string/blotter_screen"
            app:fragment="tw.tib.financisto.preference.BlotterPreferencesFragment" />
        <Preference
            android:summary="@string/transaction_screen_summary"
            android:title="@string/transaction_screen"
            app:fragment="tw.tib.financisto.preference.TransactionPreferencesFragment" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/first_day_of_week_entries"
            android:entryValues="@array/first_day_of_week_values"
            android:key="first_day_of_week"
            android:summary="@string/first_day_of_week_summary"
            android:title="@string/first_day_of_week" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_tpl">
        <ListPreference
            android:defaultValue="PN"
            android:entries="@array/pref_sms_transaction_statuses"
            android:entryValues="@array/pref_sms_transaction_status_values"
            android:key="sms_transaction_status"
            android:summary="@string/pref_tpl_transaction_status"
            android:title="@string/pref_tpl_transaction_status_title" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="sms_transaction_note"
            android:summary="@string/pref_tpl_adding_to_note"
            android:title="@string/pref_tpl_adding_to_note_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/protection">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="secure_window"
            android:summary="@string/secure_window_summary"
            android:title="@string/secure_window" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="enable_widget"
            android:summary="@string/enable_widget_summary"
            android:title="@string/enable_widget" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pin_protection"
            android:summary="@string/pin_protection_summary"
            android:title="@string/pin_protection" />
        <tw.tib.financisto.preference.PinPreference
            android:dependency="pin_protection"
            android:dialogLayout="@layout/lock"
            android:key="pin"
            android:summary="@string/pin_warning"
            android:title="@string/change_pin" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:dependency="pin_protection"
            android:key="pin_protection_use_fingerprint"
            android:summary="@string/pin_protection_use_fingerprint_summary"
            android:title="@string/pin_protection_use_fingerprint" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="pin_protection_use_fingerprint"
            android:key="pin_protection_use_fingerprint_fallback_to_pin"
            android:summary="@string/pin_protection_use_fingerprint_fallback_to_pin"
            android:title="@string/pin_protection_use_fingerprint_fallback_to_pin_summary" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="pin_protection"
            android:key="pin_protection_lock_transaction"
            android:summary="@string/pin_protection_lock_transaction_summary"
            android:title="@string/pin_protection_lock_transaction" />
        <ListPreference
            android:defaultValue="5"
            android:dependency="pin_protection"
            android:entries="@array/lock_time_entities"
            android:entryValues="@array/lock_time_values"
            android:key="pin_protection_lock_time"
            android:summary="@string/lock_time_summary"
            android:title="@string/lock_time" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/home_screen">
        <Preference
            android:key="shortcut_new_transaction"
            android:summary="@string/shortcut_summary"
            android:title="@string/shortcut_new_transaction" />
        <Preference
            android:key="shortcut_new_transfer"
            android:summary="@string/shortcut_summary"
            android:title="@string/shortcut_new_transfer" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/database_backup">
        <Preference
            android:key="database_backup_folder"
            android:summary="@string/database_backup_folder_summary"
            android:title="@string/database_backup_folder" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="auto_backup_reminder_enabled"
            android:summary="@string/auto_backup_reminder_enabled_summary"
            android:title="@string/auto_backup_reminder_enabled" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="auto_backup_enabled"
            android:summary="@string/auto_backup_enabled_summary"
            android:title="@string/auto_backup_enabled" />
        <tw.tib.financisto.preference.TimePreference
            android:dependency="auto_backup_enabled"
            android:key="auto_backup_time"
            android:summary="@string/auto_backup_time_summary"
            android:title="@string/auto_backup_time" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="auto_backup_enabled"
            android:key="auto_backup_warning_enabled"
            android:summary="@string/auto_backup_warning_summary"
            android:title="@string/auto_backup_warning_enabled" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/dropbox">
        <Preference
            android:key="dropbox_authorize"
            android:summary="@string/dropbox_authorize_summary"
            android:title="@string/dropbox_authorize" />
        <Preference
            android:key="dropbox_unlink"
            android:summary="@string/dropbox_unlink_summary"
            android:title="@string/dropbox_unlink" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="dropbox_upload_backup"
            android:summary="@string/dropbox_upload_backup_summary"
            android:title="@string/dropbox_upload_backup" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="dropbox_upload_autobackup"
            android:summary="@string/dropbox_upload_autobackup_summary"
            android:title="@string/dropbox_upload_autobackup" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="dropbox_upload_pictures"
            android:summary="@string/dropbox_upload_pictures_summary"
            android:title="@string/dropbox_upload_pictures" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="dropbox_download_pictures"
            android:summary="@string/dropbox_download_pictures_summary"
            android:title="@string/dropbox_download_pictures" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/gdocs_backup">
        <Preference
            android:key="google_drive_backup_account"
            android:summary="@string/google_drive_backup_account_summary"
            android:title="@string/google_drive_backup_account" />
        <Preference
            android:key="google_drive_sign_out"
            android:summary="@string/google_drive_sign_out_summary"
            android:title="@string/google_drive_sign_out" />
        <EditTextPreference
            android:defaultValue="financisto"
            android:key="google_drive_backup_folder"
            android:summary="@string/backup_folder_summary"
            android:title="@string/backup_folder" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="google_drive_upload_backup"
            android:summary="@string/google_drive_upload_backup_summary"
            android:title="@string/google_drive_upload_backup" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="google_drive_upload_autobackup"
            android:summary="@string/google_drive_upload_autobackup_summary"
            android:title="@string/google_drive_upload_autobackup" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="google_drive_upload_pictures"
            android:summary="@string/google_drive_upload_pictures_summary"
            android:title="@string/google_drive_upload_pictures" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="google_drive_download_pictures"
            android:summary="@string/google_drive_download_pictures_summary"
            android:title="@string/google_drive_download_pictures" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/exchange_rates">
        <ListPreference
            android:defaultValue="freeCurrency"
            android:entries="@array/exchange_rate_provider_entities"
            android:entryValues="@array/exchange_rate_provider_values"
            android:key="exchange_rate_provider"
            android:summary="@string/exchange_rate_provider_summary"
            android:title="@string/exchange_rate_provider" />
        <EditTextPreference
            android:enabled="false"
            android:key="openexchangerates_app_id"
            android:summary="@string/openexchangerates_app_id_summary"
            android:title="@string/openexchangerates_app_id" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/sort_order">
        <ListPreference
            android:defaultValue="NAME"
            android:entries="@array/sort_locations_entities"
            android:entryValues="@array/sort_locations_values"
            android:key="sort_locations"
            android:summary="@string/sort_locations_summary"
            android:title="@string/sort_locations" />
        <ListPreference
            android:defaultValue="DATE"
            android:entries="@array/sort_templates_entities"
            android:entryValues="@array/sort_templates_values"
            android:key="sort_templates"
            android:summary="@string/sort_templates_summary"
            android:title="@string/sort_templates" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/other">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pin_protection_haptic_feedback"
            android:summary="@string/pin_protection_haptic_feedback_summary"
            android:title="@string/pin_protection_haptic_feedback" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="restore_missed_scheduled_transactions"
            android:summary="@string/restore_missed_scheduled_transactions_summary"
            android:title="@string/restore_missed_scheduled_transactions" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="treat_transfer_to_ccard_as_payment"
            android:summary="@string/treat_transfer_to_ccard_as_payment_summary"
            android:title="@string/treat_transfer_to_ccard_as_payment" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
