<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="quick_menu_transaction_enabled"
        android:summary="@string/quick_menu_transaction_enabled_summary"
        android:title="@string/quick_menu_transaction_enabled" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="quick_menu_transaction_additional_status"
        android:summary="@string/quick_menu_transaction_additional_status_summary"
        android:title="@string/quick_menu_transaction_additional_status" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="quick_menu_transaction_duplicate_keep_time"
        android:summary="@string/quick_menu_transaction_duplicate_keep_time_summary"
        android:title="@string/quick_menu_transaction_duplicate_keep_time" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="quick_menu_transaction_duplicate_keep_date_time"
        android:summary="@string/quick_menu_transaction_duplicate_keep_date_time_summary"
        android:title="@string/quick_menu_transaction_duplicate_keep_date_time" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="collapse_blotter_buttons"
        android:summary="@string/collapse_blotter_buttons_summary"
        android:title="@string/collapse_blotter_buttons" />
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="show_running_balance"
        android:summary="@string/show_running_balance_summary"
        android:title="@string/show_running_balance" />
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="colorize_blotter_item"
        android:summary="@string/colorize_blotter_item_summary"
        android:title="@string/colorize_blotter_item" />
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="show_project_in_blotter"
        android:summary="@string/show_project_in_blotter_summary"
        android:title="@string/show_project_in_blotter" />
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="reset_copied_transaction_status"
        android:summary="@string/reset_copied_transaction_status_summary"
        android:title="@string/reset_copied_transaction_status" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="reset_copied_foreign_transaction_status"
        android:summary="@string/reset_copied_foreign_transaction_status_summary"
        android:title="@string/reset_copied_foreign_transaction_status" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="update_copied_transaction_project"
        android:summary="@string/update_copied_transaction_project_summary"
        android:title="@string/update_copied_transaction_project" />
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="colorize_weekend_date"
        android:summary="@string/colorize_weekend_date_summary"
        android:title="@string/colorize_weekend_date" />
</androidx.preference.PreferenceScreen>