<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="quick_menu_account_enabled"
        android:summary="@string/quick_menu_account_enabled_summary"
        android:title="@string/quick_menu_account_enabled" />
    <ListPreference
        android:defaultValue="LAST_TX"
        android:entries="@array/account_list_date_types"
        android:entryValues="@array/account_list_date_type_values"
        android:key="account_list_date_type"
        android:summary="@string/account_list_date_summary"
        android:title="@string/account_list_date" />
    <ListPreference
        android:defaultValue="SORT_ORDER_ASC"
        android:entries="@array/sort_accounts_entities"
        android:entryValues="@array/sort_accounts_values"
        android:key="sort_accounts"
        android:summary="@string/sort_accounts_summary"
        android:title="@string/sort_accounts" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="blur_balances"
        android:summary="@string/blur_balances_summary"
        android:title="@string/blur_balances" />
        />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="hide_closed_accounts"
        android:summary="@string/hide_closed_accounts_summary"
        android:title="@string/hide_closed_accounts" />
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="show_menu_button_on_accounts_screen"
        android:summary="@string/show_menu_button_on_accounts_screen_summary"
        android:title="@string/show_menu_button_on_accounts_screen" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="show_transfer_current_balance"
        android:summary="@string/show_transfer_current_balance_summary"
        android:title="@string/show_transfer_current_balance" />
</androidx.preference.PreferenceScreen>